# crun-wasm-benchmark

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
bundle/: config.json
bundle_for_native/: config.json
native/: CMakeLists.txt
scripts/: benchmark.sh  benchmark_test.sh  build.sh  configure.sh
src/: binary-trees.c  fannkuch-redux.c  mandelbrot-simd.c  mandelbrot.c  nbody.c
wasm/: CMakeLists.txt
